# ddr

./: README.md  pyproject.toml
benchmarks/config/: benchmark.yaml  example_benchmark.yaml
config/: example_config.yaml
docs/: leakance.md
engine/src/ddr_engine/lynker_hydrofabric/: build.py
examples/: custom_geodataset.ipynb
examples/eval/: example_config.yaml
examples/parameter_maps/: example_config.yaml  plot_parameter_map.ipynb
scripts/: train.py  train_and_test.py
src/ddr/nn/: node_processor.py
src/ddr/routing/: mmc.py  torch_mc.py
src/ddr/validation/: configs.py  tensorboard.py
tests/routing/: test_leakance.py
tests/validation/: test_configs.py
