[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/ddr/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ddr"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ddr"
description = "Distributed Differentiable Routing"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Tadd Bindas"},
]
maintainers = [
    {name = "Tadd Bindas", email = "taddbindas@gmail.com"},
]

dependencies = [
  "bmipy>=2.0",
  "botocore>=1.42.5",
  "colormaps",
  "cubed",
  "contextily",
  "dask>=2025.12.0",
  "geopandas",
  "hatch",
  "hydra-core",
  "icechunk",
  "matplotlib",
  "netcdf4",
  "numpy>=2.4.1",
  "pandas",
  "pydantic",
  "pykan",
  "scikit-learn",
  "scipy",
  "torch>=2.9.1",
  "tqdm",
  "xarray",
  "zarr",
]

[project.scripts]
ddr = "ddr.cli:main"

[dependency-groups]
cuda12 = [
  "cupy-cuda12x>=13.6.0",
]
cuda13 = [
  "cupy-cuda13x>=14.0.0",
]
dev = [
  "ipykernel",
  "jupyterlab",
  "mkdocs-material>=9.6.15",
  "sympy>=1.14.0",
  "zensical>=0.0.11",
  "pytest>=8.4.1",
  "pytest-cov>=6.1.1",
  "ruff>=0.12.2",
  "nbstripout>=0.8.1",
  "pre-commit",
  "pandas-stubs",
]

# Add workspace configuration
[tool.uv.workspace]
members = ["engine", "benchmarks"]

[tool.uv.sources]
ddr = { workspace = true }
ddr-engine = { workspace = true }
ddr-benchmarks = { workspace = true }
diffroute = { git = "https://github.com/TristHas/DiffRoute", tag = "v1.0.0" }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.uv]
default-groups = ["dev"]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.black]
line-length = 110
skip-string-normalization = true
preview = true
target-version = ['py311']

[tool.ruff]
line-length = 110
exclude = [".csv", "LICENSE", ".tf", ".tfvars"]
lint.select = [
  "F",      # Errors detected by Pyflakes
  "E",      # Error detected by Pycodestyle
  "W",      # Warning detected by Pycodestyle
  "I",      # isort
  "D",      # pydocstyle
  "B",      # flake8-bugbear
  "Q",      # flake8-quotes
  "TID",    # flake8-tidy-imports
  "C4",     # flake8-comprehensions
  "BLE",    # flake8-blind-except
  "UP",     # pyupgrade
  "RUF100", # Report unused noqa directives
]
lint.ignore = [
  # line too long -> we accept long comment lines; black gets rid of long code lines
  "E501",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E731",
  # allow I, O, l as variable names -> I is the identity matrix
  "E741",
  # Missing docstring in public package
  "D104",
  # Missing docstring in public module
  "D100",
  # Missing docstring in __init__
  "D107",
  # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B008",
  # __magic__ methods are are often self-explanatory, allow missing docstrings
  "D105",
  # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D400",
  # First line should be in imperative mood; try rephrasing
  "D401",
  ## Disable one in each pair of mutually incompatible rules
  # We don't want a blank line before a class docstring
  "D203",
  # We want docstrings to start immediately after the opening triple quote
  "D213",
  # Bare except okay for passing
  "E722",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"hooks/*" = ["I", "D"]  # Ignore import sorting and all docstring errors in hooks/
"mkdocs.yaml" = ["I"]
"mkdocs.yml" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
"src/ddr/bmi/ddr_bmi.py" = ["D102"]  # BMI interface methods are self-documenting (bmipy.Bmi)
"*.ipynb" = ["E402", "E501", "F401", "F811", "F821", "F841", "T201"]  # Common notebook exceptions; F821 because tutorial cells show method bodies outside class context

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
disallow_any_unimported = false
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end training tests using real HPC data (deselect by default)",
]
addopts = "-m 'not integration'"
filterwarnings =  [
    # Ignore a torch UserWarning about doing std()
    # On a single element...
    "ignore::UserWarning:.*test_utils.*:",
    # Sparse CSR tensor support is in beta state (PyTorch internal)
    "ignore:Sparse CSR tensor support is in beta state:UserWarning",
]
